Start PixelExplore refactor

--- a/PixelExplorer/PixelExplorer.vcxproj
+++ b/PixelExplorer/PixelExplorer.vcxproj
@@ -191,42 +191,42 @@
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\Camera.cpp" />
-    <ClCompile Include="src\gui\ErrorScreen.cpp" />
-    <ClCompile Include="src\gui\PauseMenu.cpp" />
-    <ClCompile Include="src\gui\PexGui.cpp" />
-    <ClCompile Include="src\gui\PlayMenu.cpp" />
+    <ClCompile Include="src\scenes\error\ErrorScreen.cpp" />
+    <ClCompile Include="src\scenes\terrain\PauseMenu.cpp" />
+    <ClCompile Include="src\common\gui\PexGui.cpp" />
     <ClCompile Include="src\Log.cpp" />
     <ClCompile Include="src\main.cpp" />
-    <ClCompile Include="src\scene\ErrorMenu.cpp" />
-    <ClCompile Include="src\scene\MainMenu.cpp" />
-    <ClCompile Include="src\scene\TerrainGenerationTest.cpp" />
+    <ClCompile Include="src\scenes\error\ErrorScene.cpp" />
+    <ClCompile Include="src\scenes\terrain\TerrainGenerationTest.cpp" />
+    <ClCompile Include="src\scenes\title\TitleScene.cpp" />
+    <ClCompile Include="src\scenes\title\TitleScreen.cpp" />
     <ClCompile Include="src\terrain\TerrainChunk.cpp" />
     <ClCompile Include="src\terrain\TerrainManager.cpp" />
     <ClCompile Include="src\terrain\TerrainRenderMesh.cpp" />
-    <ClCompile Include="src\tools\RenderLine.cpp" />
-    <ClCompile Include="src\tools\RenderPoint.cpp" />
-    <ClCompile Include="src\UpdatableScene.cpp" />
+    <ClCompile Include="src\common\tools\RenderLine.cpp" />
+    <ClCompile Include="src\common\tools\RenderPoint.cpp" />
+    <ClCompile Include="src\ApplicationScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Application.h" />
     <ClInclude Include="src\Camera.h" />
-    <ClInclude Include="src\gui\ErrorScreen.h" />
-    <ClInclude Include="src\gui\PauseMenu.h" />
-    <ClInclude Include="src\gui\PexGui.h" />
-    <ClInclude Include="src\gui\PlayMenu.h" />
+    <ClInclude Include="src\scenes\error\ErrorScreen.h" />
+    <ClInclude Include="src\scenes\terrain\PauseMenu.h" />
+    <ClInclude Include="src\common\gui\PexGui.h" />
     <ClInclude Include="src\Log.h" />
-    <ClInclude Include="src\scene\ErrorMenu.h" />
-    <ClInclude Include="src\scene\MainMenu.h" />
-    <ClInclude Include="src\scene\TerrainGenerationTest.h" />
+    <ClInclude Include="src\scenes\error\ErrorScene.h" />
+    <ClInclude Include="src\scenes\terrain\TerrainGenerationTest.h" />
+    <ClInclude Include="src\scenes\title\TitleScene.h" />
+    <ClInclude Include="src\scenes\title\TitleScreen.h" />
     <ClInclude Include="src\terrain\DebugTerrainGenerator.h" />
     <ClInclude Include="src\terrain\FlatTerrainGenerator.h" />
     <ClInclude Include="src\terrain\TerrainChunk.h" />
     <ClInclude Include="src\terrain\TerrainGenerator.h" />
     <ClInclude Include="src\terrain\TerrainManager.h" />
     <ClInclude Include="src\terrain\TerrainRenderMesh.h" />
-    <ClInclude Include="src\tools\RenderLine.h" />
-    <ClInclude Include="src\tools\RenderPoint.h" />
-    <ClInclude Include="src\UpdatableScene.h" />
+    <ClInclude Include="src\common\tools\RenderLine.h" />
+    <ClInclude Include="src\common\tools\RenderPoint.h" />
+    <ClInclude Include="src\ApplicationScene.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
