--- a/PXEngine/PXEngine.vcxproj
+++ b/PXEngine/PXEngine.vcxproj
@@ -220,6 +220,7 @@ python $(ProjectDir)tools\CreateAPIHeader.py $(ProjectDir)include PxeEngineAPI.h
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\PxeDynamicPhysicsActor.cpp" />
+    <ClCompile Include="src\PxeGuiComponent.cpp" />
     <ClCompile Include="src\PxePhysicsActor.cpp" />
     <ClCompile Include="src\PxePhysicsShape.cpp" />
     <ClCompile Include="src\PxeRenderProperties.cpp" />
@@ -274,8 +275,9 @@ python $(ProjectDir)tools\CreateAPIHeader.py $(ProjectDir)include PxeEngineAPI.h
     <ClInclude Include="public\PxeDefaultCamera.h" />
     <ClInclude Include="private\PxeGlImGuiBackend.h" />
     <ClInclude Include="public\PxeGlShaderProgram.h" />
-    <ClInclude Include="public\PxeGuiRenderProperties.h" />
-    <ClInclude Include="public\PxeGuiShader.h" />
+    <ClInclude Include="private\PxeGuiRenderProperties.h" />
+    <ClInclude Include="private\PxeGuiShader.h" />
+    <ClInclude Include="public\PxeGuiComponent.h" />
     <ClInclude Include="public\PxeInputManager.h" />
     <ClInclude Include="public\PxeActionSource.h" />
     <ClInclude Include="public\PxeApplication.h" />
